# Parallel-QS

./: CMakeLists.txt  InvertedIndex.cpp  Makefile.txt  Parallel-QS.cu  QuasiCompression.cpp
